Add css folder and index.css

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-HEllo World
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div class="container">
+        <h1>Lorem, ipsum dolor.</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum ex blanditiis vel maiores et quibusdam pariatur fugiat natus ab sequi, sapiente voluptatibus reiciendis asperiores rerum magnam qui quo facere? Voluptatem, vel optio? Voluptate voluptatibus aspernatur fugit iusto, non accusamus consequuntur nam at doloremque aliquam dolore, reprehenderit praesentium voluptas ullam veniam?</p>
+    </div>
+</body>
+</html>
