--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="css/index.css">
     <title>KOWBI Github</title>
 </head>
@@ -11,5 +12,12 @@
         <h1>Lorem, ipsum dolor.</h1>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum ex blanditiis vel maiores et quibusdam pariatur fugiat natus ab sequi, sapiente voluptatibus reiciendis asperiores rerum magnam qui quo facere? Voluptatem, vel optio? Voluptate voluptatibus aspernatur fugit iusto, non accusamus consequuntur nam at doloremque aliquam dolore, reprehenderit praesentium voluptas ullam veniam?</p>
     </div>
+
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
 </html>
